--- a/index.css
+++ b/index.css
@@ -1,4 +1,12 @@
+
+
 html, body {
-  margin: 0;
+  margin: 5%;
   padding: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+}
+
+.title {
+  color: #16697A;
 }
