--- a/index.css
+++ b/index.css
@@ -4,9 +4,26 @@ html, body {
   margin: 5%;
   padding: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  text-align: center;
 }
 
 .title {
   color: #16697A;
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.entry-textbox {
+  background-color: #FFA62B;
+  width: 20em;
+  height: 10em;
+  padding: 1em;
+  margin-bottom: 0.5em;
+  border: unset;
+  border-radius: 25px;
+}
+
+.button {
+  border-radius: 10px;
+  padding: 0.5em;
+  float: right;
 }
