--- a/index.css
+++ b/index.css
@@ -22,8 +22,13 @@ html, body {
   border-radius: 25px;
 }
 
-.button {
-  border-radius: 10px;
-  padding: 0.5em;
-  float: right;
+#entryForm .button {
+  border-radius: 25px;
+  padding: 5px 16px;
+  margin-left: 76%;
+  border: unset;
+}
+
+#entryForm .entry-textbox {
+  outline: none;
 }
