--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 
-
-html, body {
+body {
   margin: 5%;
-  padding: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT';
+  display: grid;
+  justify-content: center;
 }
 
 .title {
@@ -23,12 +23,23 @@ html, body {
 }
 
 #entryForm .button {
+  border: unset;
   border-radius: 25px;
   padding: 5px 16px;
   margin-left: 76%;
-  border: unset;
 }
 
 #entryForm .entry-textbox {
   outline: none;
+}
+
+#entries {
+  background: #16697A;
+  color: #EDE7E3;
+  font-family: cursive;
+  padding: 2em;
+  max-width: 20em;
+  border: unset;
+  border-radius: 25px;
+  margin-top: 1em;
 }
